frontend/css/components/_room.scss
.room-page {
  .room-logs, .room-users {
    height: $main-height;
    margin-bottom: 0;
  }
}

.room-users .dropdown {
  // Fix issues with dropdowns getting clipped by the panel
  position: absolute;
}

.room-logs {
  .panel-body {
    padding: 5px 20px 5px 10px;
  }

  .item {
    @include clearfix();
    margin-bottom: 20px;

    .avatar {
      width: 40px;
      float: left;
    }

    .message {
      margin-left: 50px;
      margin-bottom: 0;

      .name {
        display: block;
        font-weight: 600;

        .dropdown {
          display: inline-block;
        }
      }
    }

    &.item-narrow {
      @media (min-width: $screen-sm-min) and (max-width: $screen-md-max) {
        margin-bottom: 10px;

        .avatar {
          display: none;
        }

        .message {
          margin-left: 0;
        }
      }
    }
  }
}

